# analyzers

./: .gitmodules  CMakeLists.txt  README.md
src/super_ast/analyzer/: check.cpp  const_ref_vectors.cpp  dead_assignation.cpp  dead_assignation.hpp  error.hpp  function_ids.hpp  grapher.cpp  liveness.cpp  liveness.hpp  local_declaration.cpp  local_declaration.hpp  main_dead_assignation.cpp  main_local_declaration.cpp  main_simple_fors.cpp  main_variable_initialization.cpp  modified_variable.hpp  printer.cpp  recursivity.hpp  simple_fors.cpp  simple_fors.hpp  variable_initialization.cpp  variable_initialization.hpp
src/super_ast/analyzer/visitor/: call_graph.cpp  call_graph.hpp  const_ref_vectors.cpp  constant_references.cpp  constant_references.hpp  dead_assignation.cpp  dead_assignation.hpp  find_identifier.hpp  function_errors.hpp  function_ids.cpp  liveness.cpp  local_declaration.cpp  local_declaration.hpp  modified_variable.hpp  printer.cpp  printer.hpp  recursivity.cpp  recursivity.hpp  simple_fors.hpp  useless_conditionals.cpp  useless_conditionals.hpp  variable_initialization.cpp  variable_initialization.hpp
test/: const_ref_vectors.json  dead_assignation.cpp  dead_assignation.json  local_declaration.cpp  local_declaration.json  simple_fors.cpp  simple_fors.json  useless_conditionals.json  variable_initialization.cpp  variable_initialization.json
